@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.10:
 *04/06/20:
+  * Fix various systray issues (Simon)
+    SystemTray.cc Toolbar.cc ToolbarItem.hh
   * Support _NET_WM_WINDOW_TYPE_DESKTOP (Simon)
     - eg nautilus desktop windows are on the bottom, not tabable, etc
     Ewmh.hh/cc Window.hh/cc
